# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-02-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix external service validation done during OS process spawn
    * Add websocket_ping to cloudi_service_http_cowboy
    * Add cache to cloudi_service_filesystem
      (so HTTP cache controls can be used when the cached files are refreshed)

2014-02-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix LinuxMint compilation issues

2014-02-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add fault_isolation argument to cloudi_service_queue
    * Add cloudi_service:send_async_active/8 for manually specifying the
      transaction id used in the service request

2014-02-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_queue for persistent queuing of
      service requests
    * Add retries to cloudi_service_queue
    * Simplify the default configuration

2014-02-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Tweak syslog integration
    * Allow SSL files for cloudi_service_http_cowboy to be configured with
      environment variables that are expanded
      (separate SSL files can not yet be specified until Erlang/OTP changes
       (http://erlang.org/pipermail/erlang-questions/2013-October/075814.html))

2014-02-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add syslog logging support

2014-02-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.1 (beta) released
    * Update cpg, key2value, pqueue, quickrand, reltool_util, service,
      trie, uuid after version bump and docs update
    * Fixed C/C++ CloudI API binary key/value parsing for request_info data
    * Fixed binary key/value parsing in cloudi_service_http_cowboy and
      cloudi_service_http_elli
    * Fixed cloudi_service_filesystem

2014-01-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:environment_lookup/0,